@@ -19,13 +19,6 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
-tasks.named('test') {
-    jvmArgs(
-            '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
-            '--add-opens=java.base/java.io=ALL-UNNAMED'
-    )
-}
-
 graalvmNative {
 
     agent {
